// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers settingsReducer should correctly disableSubmenu 1`] = `
Object {
  "activeSubMenu": null,
  "settingsOpen": false,
  "theme": "dark",
}
`;

exports[`reducers settingsReducer should correctly setActiveSubmenu 1`] = `
Object {
  "activeSubMenu": true,
  "settingsOpen": false,
  "theme": "dark",
}
`;

exports[`reducers settingsReducer should correctly setSettingsOpen 1`] = `
Object {
  "activeSubMenu": null,
  "settingsOpen": true,
  "theme": "dark",
}
`;

exports[`reducers settingsReducer should handle initial state 1`] = `
Object {
  "activeSubMenu": null,
  "settingsOpen": false,
  "theme": "dark",
}
`;
